[metadata]
# replace with your username:
name = guessinggame
version = 0.0.1
author = Denea Clark
author_email = deneac15@ksu.edu
description = A fun guessinggame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/K-State-Computational-Core/example-10-releases-python-denea-clark
project_urls =
    Bug Tracker = https://github.com/K-State-Computational-Core/example-10-releases-python-denea-clark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include-package-data = True

[options.package_data]
guessinggame = py.typed